--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@fontsource/bebas-neue": "^5.2.5",
     "@tailwindcss/vite": "^4.0.15",
+    "chromium-bidi": "^3.0.0",
+    "playwright": "^1.51.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-elastic-carousel": "^0.11.5",
