--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.15"
   },
