--- a/package.json
+++ b/package.json
@@ -7,19 +7,22 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server --watch json/data.json --port 3001"
   },
   "dependencies": {
     "@fontsource/bebas-neue": "^5.2.5",
     "@tailwindcss/vite": "^4.0.15",
     "chromium-bidi": "^3.0.0",
     "html2canvas": "^1.4.1",
+    "json-server": "1.0.0-beta.3",
     "playwright": "^1.51.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-router-dom": "^7.5.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.15"
   },
