--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.5.0",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.0.15"
+    "tailwindcss": "^4.0.15",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
