--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@fontsource/bebas-neue": "^5.2.5",
     "@tailwindcss/vite": "^4.0.15",
     "chromium-bidi": "^3.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "gsap": "^3.13.0",
     "html2canvas": "^1.4.1",
     "json-server": "1.0.0-beta.3",
+    "lucide-react": "^0.553.0",
     "playwright": "^1.51.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -24,6 +28,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.5.0",
     "react-toastify": "^11.0.5",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.0.15",
     "xlsx": "^0.18.5"
   },
@@ -36,6 +41,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "tw-animate-css": "^1.4.0",
     "vite": "^6.2.0"
   }
 }
