--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gsap": "^3.13.0",
     "html2canvas": "^1.4.1",
     "json-server": "1.0.0-beta.3",
+    "lenis": "^1.3.14",
     "lucide-react": "^0.553.0",
     "playwright": "^1.51.1",
     "react": "^19.0.0",
@@ -30,6 +31,7 @@
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.0.15",
+    "three": "^0.181.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
